# rs-chef-api

./: .gitignore  .travis.yml  Cargo.toml  README.md
chef_api/: Cargo.toml  README.md
chef_api/fixtures/: config.json  spec-user.pem
chef_api/src/: api_client.rs  config.rs  credentials.rs  errors.rs  lib.rs  macros.rs  utils.rs
chef_api/src/authentication/: auth11.rs  auth13.rs
chef_api/src/requests/: clients.rs  containers.rs  controls.rs  cookbook_artifacts.rs  cookbooks.rs  data.rs  environments.rs  groups.rs  mod.rs  node.rs  nodes.rs  policies.rs  policy_groups.rs  principals.rs  roles.rs  sandboxes.rs  search.rs  server_organizations.rs  server_requests.rs  server_users.rs  universe.rs  users.rs
examples/: simple.rs  simple2.rs
fixtures/: config.json  environment.json  node.json  role.json
src/: api_client.rs  authentication.rs  config.rs  errors.rs  http_headers.rs  lib.rs  utils.rs
src/authentication/: auth11.rs  auth12.rs  auth13.rs  mod.rs
src/models/: client.rs  cookbook.rs  data_bag.rs  data_bag_item.rs  environment.rs  mod.rs  node.rs  role.rs
src/requests/: client.rs  cookbook.rs  data_bag.rs  data_bag_item.rs  environment.rs  mod.rs  node.rs  role.rs
