[package]
name = "chef_api"
version = "0.1.0"
authors = ["Thom May <thom@chef.io>"]

[dependencies]
time = "*"
log = "*"
rustc-serialize = "*"
clippy = {version = "*", optional = true}
hyper = "0.10"
hyper-openssl = "0.2"

url = "*"
chrono = "*"
openssl = "0.9"
env_logger = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.10"

[features]
default = []
dev = ["clippy"]

[[bin]]
name = "chef_api"
doc = false
test = false
