[package]
name = "chef"
version = "0.1.0"
authors = ["Thom May <thom@chef.io>"]

[dependencies]
chef_api = { path = "chef_api" }
clippy = {version = "*", optional = true}
env_logger = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "*"
chrono = "*"
failure = "*"

[features]
default = []
dev = ["clippy"]

[[bin]]
name = "chef"
doc = false
test = false

[workspace]
members = [ "chef_api" ]
