[package]
name = "chef"
version = "0.1.0"
authors = ["Thom May <thom@chef.io>"]
readme = "README.md"
description = "Models for Chef Server objects"
repository = "https://github.com/chef/rs-chef-api"
license = "Apache-2.0"
edition = "2018"

[dependencies]
chef_api = { version = "0.2", path = "chef_api" }
clippy = {version = "0", optional = true}
env_logger = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.3"
chrono = "0.4"
failure = "0.1"

[features]
default = []
dev = ["clippy"]

[workspace]
members = [ "chef_api" ]
