[package]
name = "chef_api"
version = "0.1.0"
authors = ["Thom May <thom@may.lt>"]

[features]
default = []
dev = ["clippy"]

[dependencies]
time = "*"
log = "*"
rustc-serialize = "*"
clippy = {version = "*", optional = true}

futures = "0.1"
tokio-core = "0.1"
hyper = "0.11"
hyper-openssl = "0.3"

url = "*"
chrono = "*"
openssl = "0.9"
env_logger = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

failure = "*"
failure_derive = "*"
