[package]
name = "chef_api"
version = "0.2.0"
authors = ["Thom May <thom@may.lt>"]
readme = "README.md"
description = "Client for the Chef Server API"
repository = "https://github.com/chef/rs-chef-api"
license = "Apache-2.0"
edition = "2018"

[dependencies]
time = "0.1"
log = "0.3"
rustc-serialize = "0.3"

futures = "0.1"
tokio-core = "0.1"
hyper = "0.11"
hyper-openssl = "0.5"

url = "1.6"
chrono = "0.4"
openssl = "0.10"
env_logger = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

failure = "0.1"

toml = "0.4"
dirs = "1.0"
